fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/GPO_Contract__c.object-meta.xml
<CustomObject>
    <label>GPO Contract</label>
    <nameField>
        <label>GPO Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPO Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>