fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/Admin_Fee_Information__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Information__c</fullName>
    <label>Admin Fee Information</label>
    <type>TextArea</type>
</CustomField>