fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>