fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/Contract_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Detail__c</fullName>
    <label>Contract Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>