fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SBU__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>Bladder Management</fullName>
            </value>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>Dialysis Access</fullName>
            </value>
            <value>
                <fullName>Endourology &amp; Specialty</fullName>
            </value>
            <value>
                <fullName>ImForecasttable Ports</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Interventional Procedures</fullName>
            </value>
            <value>
                <fullName>Interventional Sheathes</fullName>
            </value>
            <value>
                <fullName>Large Bore CVCs</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>PICCs</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Skin Stapling</fullName>
            </value>
            <value>
                <fullName>Suture</fullName>
            </value>
            <value>
                <fullName>VasoNova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>