fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/SAP_Contract_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Contract Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>