fullSandbox11072023/force-app/main/default/objects/GPO_Contract__c/fields/Supplier_Source__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Source__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>